# greengrass-ipc-rust

./: .gitignore  Cargo.toml  NEXT_STEPS.md  README.md  test_python.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
examples/: components.rs  configuration.rs  deployments.rs  list_deployments.rs  pubsub.rs  pubsub_iotcore.rs  shadow_client.rs  stream_usage.rs  subscribe_only.rs
greengrass-shadow/: Cargo.toml
greengrass-shadow/src/: error.rs  lib.rs  manager.rs
src/: client.rs  error.rs  lib.rs  lifecycle.rs  model.rs  operation.rs
src/connection/: mod.rs
src/event_stream/: mod.rs
src/utils/: mod.rs
src/utils/shadow/: client.rs  document.rs  error.rs  manager.rs  mod.rs  persistence.rs  topics.rs
tests/: encoding_tests.rs  event_stream_compatibility.rs  message_comparison_framework.rs  message_encoding_utils.rs
tests/python/: message_encoder.py
