[package]
name = "greengrass-ipc-rust"
version = "0.1.0"
edition = "2021"
description = "Rust port of the Greengrass IPC library"
authors = ["Factbird Team"]
license = "Apache-2.0"
rust-version = "1.63"

[[example]]
name = "shadow_client"
required-features = ["shadow-util"]

[dependencies]
tokio = { version = "1.34", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"
bytes = "1.5"
serde_with = { version = "3.4", features = ["base64"] }
thiserror = "1.0"
bincode = "1.3"
uuid = { version = "1.6", features = ["v4"] }
tracing = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
base64 = "0.21"
dirs = "5.0"
async-stream = "0.3"

aws-config = { version = "1.1.7", features = [
    "behavior-version-latest",
], optional = true }
aws-sdk-iotdataplane = { version = "1.72.0", optional = true }

rustot = { git = "ssh://git@github.com/FactbirdHQ/rustot", rev = "505fcdb" }


[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
env_logger = "0.11"

[features]
default = ["shadow-manager"]

shadow-util = []
shadow-manager = ["shadow-util", "dep:aws-config", "dep:aws-sdk-iotdataplane"]

[patch."ssh://git@github.com/FactbirdHQ/rustot"]
rustot = { path = "../rustot" }
rustot-derive = { path = "../rustot/rustot_derive" }
