[package]
name = "greengrass-ipc-rust"
version = "0.1.0"
edition = "2024"
description = "Rust port of the Greengrass IPC library"
authors = ["Factbird Team"]
license = "Apache-2.0"
rust-version = "1.85"

[dependencies]
tokio = { version = "1.50", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"
bytes = "1.11"
serde_with = { version = "3.18", features = ["base64"] }
thiserror = "2.0"
bincode = "2"
uuid = { version = "1.23", features = ["v4"] }
tracing = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
base64 = "0.22"
dirs = "6.0"
async-stream = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.27"
env_logger = "0.11"
