[package]
name = "greengrass-shadow"
version = "0.1.0"
edition = "2021"
description = "Multi-shadow manager for AWS IoT Greengrass using rustot"
authors = ["Factbird Team"]
license = "Apache-2.0"
rust-version = "1.63"

[dependencies]
greengrass-ipc-rust = { path = "../" }
rustot = { git = "ssh://git@github.com/FactbirdHQ/rustot", rev = "b147c17", features = [
    "std",
    "shadows_kv_persist",
] }

aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-iotdataplane = "1.72.0"
tokio = { version = "1", features = ["sync", "time", "fs"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[patch."ssh://git@github.com/FactbirdHQ/rustot"]
rustot = { path = "../../rustot" }
rustot-derive = { path = "../../rustot/rustot_derive" }
